# joy2-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
configs/: ETS2.toml  default.toml  test_invalid.toml  test_invalid_keys.toml
examples/: 01_scan_joycon2.rs  02_connect_joycon2.rs  03_init_joycon2.rs  04_discover_characteristics.rs  05_stream_input.rs  06_stream_motion.rs  07_stream_right_full.rs  11_gyro_mock_mouse.rs  12_test_config_validation.rs  13_test_invalid_config.rs  14_test_invalid_keys.rs  21_mock_executor_test.rs  22_manager_mock_test.rs  25_full.rs
src/: lib.rs  main.rs  manager.rs
src/backend/: keyboard_sendinput.rs  mock_keyboard.rs  mock_mouse.rs  mod.rs  mouse_sendinput.rs
src/joycon2/: connection.rs  constants.rs  controller.rs  mac_cache.rs  mod.rs  types.rs
src/mapping/: config.rs  executor.rs  mod.rs
tests/: test_mock_backends.rs  test_mock_logging.rs
