[package]
name = "joy2-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# Bluetooth Low Energy
btleplug = "0.11"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# UUIDs
uuid = "1.0"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Event channels
tokio-util = "0.7"
crossbeam-channel = "0.5"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Windows API
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
